--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. <br>
-      Coded by <a href="https://www.frontendmentor.io/profile/NitheeshKumar-C">NitheeshKumar</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/NitheeshKumar-C" target="_blank">NitheeshKumar</a>.
     </div>
   </main>
   
