--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="stats">
           <div class="stats-div">
-            <p class="stats-num">10k+</p>
+            <p class="stats-num">10K+</p>
             <p class="stats-p">COMPANIES</p>
           </div class="stats-div">
           <div>
@@ -38,7 +38,7 @@
             <p class="stats-p">TEMPLATES</p>
           </div>
           <div class="stats-div">
-            <p class="stats-num">12m+</p>
+            <p class="stats-num">12M+</p>
             <p class="stats-p">QUERIES</p>
           </div>
         </div>
